# Lap-trinh-ung-dung-Chat-GUI-via-TCP

./: .gitignore  CMakeLists.txt  README.md
Code/: CMakeLists.txt  CMakePresets.json  Protocol.cpp  Protocol.h  README.md
Code/Client/: client.cpp
Code/Server/: server.cpp
Code/Shared/: Protocol.h  main.cpp
